plugins {
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8
compileJava.options.encoding = 'windows-1251'

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.10.Final'
    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
}
